--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
+.imagewidth{
+height: 200px;
+width: 200px;
+}
+.login-section{
+  height: 500px;
+  width: 400px;
+  padding: 30px;
+  border-radius: 10px;
+}
+.position{
+  padding-left: 36%;
+}
+.width{
+  width: 100px;
+}
+.forgot-password{
+padding-left: 34%;
+text-decoration: none;
+}
+.text-align{
+  text-align: right;
+}
+
+
+.image-size{
+  margin-top: 70px;
+  width: 800px;
+}
+.welcome-section{
+  margin-top: 100px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media only screen and (max-width: 600px) {
+  .position{
+    padding-left: 0;
   }
 }
